--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="smart-mobile-shop" />
     <meta name="twitter:image" content="https://drive.google.com/file/d/1M3q2d3e62MvS-pUAHnSr8E-PbuhUFBvu/view?usp=sharing" />
+    
+    <!-- Social media links -->
+    <meta property="social:youtube" content="https://www.youtube.com/@smartmobile-rajesh" />
+    <meta property="social:instagram" content="https://www.instagram.com/smart_mobile7788?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" />
+    
+    <!-- Additional SEO metadata -->
+    <meta name="keywords" content="smart mobile, smart mobile vijayawada, mobile shop in vijayawada, mobile shop, smartphones, mobile accessories, mobile repair, best mobile store" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="/" />
+
   </head>
 
   <body>
