--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="social:instagram" content="https://www.instagram.com/smart_mobile7788?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" />
     
     <!-- Additional SEO metadata -->
-    <meta name="keywords" content="smart mobile, smart mobile vijayawada, mobile shop in vijayawada, mobile shop, smartphones, mobile accessories, mobile repair, best mobile store" />
+    <meta name="keywords" content="smart mobile, smart mobile vijayawada, mobile shop in vijayawada, mobile shop, smartphones, mobile accessories, mobile repair, best mobile store, samsung store, apple store, oneplus store, xiaomi store, realme store, oppo store, vivo store, motorola store, nokia store, infinix store, itel store, lava store, iqoo store, google pixel store, keypad mobile store, samsung laptop store, xiaomi laptop store, laptop accessories, mobile repair, vijayawada electronics store" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="/" />
 
