--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="/" />
 
+    <!-- Google Site Verification -->
+    <!-- <meta name="google-site-verification" content="google8a8accbdf5db45f4.html" /> -->
+    <meta name="google-site-verification" content="U2RD-8sSnBzNC7cPOXn_Z5LWeCnbzemVNAUTpLDRfo8" />
+
   </head>
 
   <body>
