--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SMART MOBILE</title>
-    <meta name="description" content="Smart Mobile Project" />
+    <!-- <meta name="description" content="Smart Mobile Project" /> -->
+    <meta name="description" content="Smart Mobile is Vijayawada's trusted mobile store with 23+ years of experience. Offering genuine smartphones, accessories, and expert repair services at affordable prices. Visit us at Lalitha Complex, Eluru Road, Governor Peta." />
     <meta name="author" content="Jai Sudharsh" /> 
 
     <meta property="og:title" content="smart-mobile-shop" />
@@ -29,7 +30,7 @@
     <meta property="social:instagram" content="https://www.instagram.com/smart_mobile7788?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" />
     
     <!-- Additional SEO metadata -->
-    <meta name="keywords" content="smart mobile, smart mobile vijayawada, mobile shop in vijayawada, mobile shop, smartphones, mobile accessories, mobile repair, best mobile store, samsung store, apple store, oneplus store, xiaomi store, realme store, oppo store, vivo store, motorola store, nokia store, infinix store, itel store, lava store, iqoo store, google pixel store, keypad mobile store, samsung laptop store, xiaomi laptop store, laptop accessories, mobile repair, vijayawada electronics store, smart mobile in vijayawada, smart mobile vijayawada, mobile shop in vijayawada, mobile shop in vijayawada, smartphones in vijayawada, mobile accessories in vijayawada, mobile repair in vijayawada, best mobile store in vijayawada, samsung store in vijayawada, apple store in vijayawada, oneplus store in vijayawada, xiaomi store in vijayawada, realme store in vijayawada, oppo store in vijayawada, vivo store in vijayawada, motorola store in vijayawada, nokia store in vijayawada, infinix store in vijayawada, itel store in vijayawada, lava store in vijayawada, iqoo store in vijayawada, google pixel store in vijayawada, keypad mobile store in vijayawada, samsung laptop store in vijayawada, xiaomi laptop store in vijayawada, laptop accessories in vijayawada, mobile repair in vijayawada, vijayawada electronics store" />
+    <meta name="keywords" content="smart mobile, smart mobile vijayawada, mobile shop in vijayawada, smartphones in vijayawada, mobile accessories in vijayawada, mobile repair in vijayawada, best mobile store in vijayawada, samsung store in vijayawada, apple store in vijayawada, oneplus store in vijayawada, xiaomi store in vijayawada, realme store in vijayawada, oppo store in vijayawada, vivo store in vijayawada, motorola store in vijayawada, nokia store in vijayawada, infinix store in vijayawada, itel store in vijayawada, lava store in vijayawada, iqoo store in vijayawada, google pixel store in vijayawada, keypad mobile store in vijayawada, samsung laptop store in vijayawada, xiaomi laptop store in vijayawada, laptop accessories in vijayawada, vijayawada electronics store" />
     <meta name="robots" content="index, follow" />
     <!-- <link rel="canonical" href="/" /> -->
     <link rel="canonical" href="https://smartmobilevijayawada.netlify.app/" />
@@ -44,7 +45,17 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Smart Mobile Vijayawada",
+      "image": "https://smartmobilevijayawada.netlify.app/smart-mobile-logo.jpg",
       "url": "https://smartmobilevijayawada.netlify.app/",
+      "telephone": "+91-9985007788",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Your Shop Address Here",
+        "addressLocality": "Vijayawada",
+        "addressRegion": "Andhra Pradesh",
+        "postalCode": "520001",
+        "addressCountry": "IN"
+      },
       "sameAs": [
         "https://www.youtube.com/@smartmobile-rajesh",
         "https://www.instagram.com/smart_mobile7788"
