--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>SMART MOBILE</title>
     <!-- <meta name="description" content="Smart Mobile Project" /> -->
     <meta name="description" content="Smart Mobile is Vijayawada's trusted mobile store with 23+ years of experience. Offering genuine smartphones, accessories, and expert repair services at affordable prices. Visit us at Lalitha Complex, Eluru Road, Governor Peta." />
-    <meta name="author" content="Jai Sudharsh" /> 
+    <meta name="author" content="Jai Sudharsh, Rama Teja" /> 
 
     <meta property="og:title" content="smart-mobile-shop" />
-    <meta property="og:description" content="Smart Mobile Project" />
+    <!-- <meta property="og:description" content="Smart Mobile Project" /> -->
+    <meta property="og:description" content="Top-rated mobile shop in Vijayawada for smartphones, laptops, and accessories. Visit Smart Mobile today!" />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:image" content="https://drive.google.com/file/d/1M3q2d3e62MvS-pUAHnSr8E-PbuhUFBvu/view?usp=sharing" /> -->
     <meta property="og:image" content="https://smartmobilevijayawada.netlify.app/smart-mobile-logo.jpg" />
